# mcabber-templatecmd-module

./: .hg_archival.txt  .hgignore  CMakeLists.txt  README  TODO  config.h.in  templatecmd.avv.in  templatecmd.c
docs/: index.mdwn  readme.mdwn  templatecmd.rc  todo.mdwn
help/en/: hlp_templatecmd.txt
